--- a/生态文明.html
+++ b/生态文明.html
@@ -6,10 +6,33 @@
     <link rel="stylesheet" href="生态文明.css">
 </head>
 <body>
-<header>
+<header >
+    <h1>生态文明</h1>
+    <nav>
+        <ul>
+            <li><a href="待输入.html">生态环境</a></li>
+            <li><a href="待输入.html">动植物</a></li>
+            <li><a href="待输入.html">人与自然</a></li>
+            <li><a href="待输入.html">新能源科技</a></li>
+
+        </ul>
+    </nav>
 
 
 </header>
+<section class="first">
+    <h6>欢迎来到自然界！</h6>
+    <p>这里是动植物的世界
+    </p>
+<p>
+    阿巴阿巴
+</p>
+</section>
+<section class="second">
+    <p1>山川草木，皆为吾友；日月星辰，共照吾年<br></br></p1>
+        <p2>&nbsp;&nbsp;&nbsp;&nbsp;"人类与自然万物生活在同一片土地上，<br></br>见证着同样的日出日落。"
+    </p2>
+</section>
 <section>
 <div class="landscape">
     <div class="mountain"></div>
@@ -57,14 +80,132 @@
 
 </div>
     </section>
-<section>
-    <div class="sec1">
-        <h1 style="font-size: 62px;"><mark>生态文明，第一次尝试</mark></h1>
+<section class="third">
+    <p>可人类的掠夺却使生态走向衰败</p>
+
+</section>
+
+<section class="fourth">
+    <div class="container">
+        <div>
+            <div class="content">
+                <h2>全球气候变暖</h2>
+                <span>北极熊“何以为家”</span>
+            </div>
+        </div>
+        <div>
+            <div class="content">
+                <h2>工业污染</h2>
+                <span>大象的长鼻不再呼吸</span>
+            </div>
+        </div>
+        <div>
+            <div class="content">
+                <h2>捕杀动物</h2>
+                <span>佳肴的代价是什么</span>
+            </div>
+        </div>
+        <div>
+            <div class="content">
+                <h2>海洋污染</h2>
+                <span>游鱼向何方溯游</span>
+            </div>
+        </div>
     </div>
+</section>
+
+<section class="fifth">
     <div class="sec2">
-        <h1 style="font-size: 62px;">这个是 <i>v1.0</i>版本, 欢迎提出你的建议</h1>
+    <h2>欢迎提出你的建议！</h2>
+</div>
+    <div class="sec1">
+        <h2><mark> 第一次搞，像个大迷糊</mark></h2>
     </div>
+
+
+</section>
+
+<section class="sixth">
+    <article>
+        <h4>人类对环境造成的危害</h4>
+        <p9>2020年《地球生命力报告》于9月10日发布。这项研究是目前对全球生物多样性最全面的评估之一，由来自世界各地的134名专家编写。报告发现，从中美洲的热带雨林到太平洋，大自然正在以前所未有的规模被人类开发和破坏。
+
+            此项研究分析追踪了全球20811个种群的4392种脊椎动物的数据。被监测的动物包括备受关注的濒危动物，如熊猫和北极熊，以及不太为人所知的两栖动物和鱼类。最新的数据显示，在世界各地，脊椎动物的种群数量都在急剧减少，自1970年以来平均减少了三分之二以上。</p9>
+    </article>
+
+
+
+</section>
+
+<section class="seventh">
+
+        <div class="container">
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="https://image.flaticon.com/icons/png/256/4213/4213732.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>Lion<br><span>Happy Birthday</span></h3>
+                    </div>
+                </div>
+                <ul class="sci">
+                    <li>
+                        <a href="">happy</a>
+                    </li>
+                    <li>
+                        <a href="">birth</a>
+                    </li>
+                    <li>
+                        <a href="">day</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="https://image.flaticon.com/icons/png/256/4213/4213736.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>Frog<br><span>Happy Birthday</span></h3>
+                    </div>
+                </div>
+                <ul class="sci">
+                    <li>
+                        <a href="">happy</a>
+                    </li>
+                    <li>
+                        <a href="">birth</a>
+                    </li>
+                    <li>
+                        <a href="">day</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx">
+                        <img src="https://image.flaticon.com/icons/png/256/4213/4213641.png">
+                    </div>
+                    <div class="contentBx">
+                        <h3>Giraffe<br><span>Happy Birthday</span></h3>
+                    </div>
+                </div>
+                <ul class="sci">
+                    <li>
+                        <a href="">happy</a>
+                    </li>
+                    <li>
+                        <a href="">birth</a>
+                    </li>
+                    <li>
+                        <a href="">day</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
+
 <footer>
 <p>往“耶”设计小组</p>
 
@@ -72,3 +213,6 @@
 
 </body>
 </html>
+
+
+
